--- a/latex/chapter-conclusions.tex
+++ b/latex/chapter-conclusions.tex
@@ -1,6 +1,7 @@
 \chapter{Conclusion}
-\index{Conclusions%
-@\emph{Conclusions}}%
+\index{Conclusion%
+@\emph{Conclusion}}%
+\label{ch:conclusion}
 
 Web Components\index{Web Components} are a powerful addition to the web developer's arsenal. 
 Their fundamental premise is that web content can be componentized, encapsulted\index{encapsulation}, and abstracted\index{abstraction} behind well-defined APIs\index{API}.
