--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -384,7 +384,7 @@ Without this amazing program and everyone mentioned above, I would not be who I 
 \indent
 
 This report is a case study of applying abstraction, encapsulation, and composition techniques to web application architecture with the use of Web Components, 
-a proposed extension to the HTML5 document object model. 
+a proposed extension to the HTML5 Document Object Model. 
 I created Speakur, a real-time social discussion plugin for the mobile and desktop web, 
 to show how Web Components can help realize software engineering principles and design patterns, including the composition of applications from components sourced from diverse authors and frameworks.
 
@@ -396,7 +396,7 @@ This report reviews Web Components and related technologies and provides a case 
 The major research question is whether Web Components offer a viable path towards the encapsulation and composition principles that have largely eluded web engineers thus far. 
 In other words, \textit{are components really the future of the web}? 
 Subsidiary topics include assessing the maturity and performance of current Web Components technologies,
-and evaluating methods of synchronization between user interface components and local and remote data models.
+and methods of synchronization between user interface components and local and remote data models.
 My analysis shows that Web Components successfully address many of the key structural and organizational problems faced by web software engineers.
 
 \tableofcontents   % Table of Contents will be automatically
