--- a/latex/chapter-implementation.tex
+++ b/latex/chapter-implementation.tex
@@ -1,6 +1,7 @@
 \chapter{Implementing a Web Component}
-\index{Implementation%
-@\emph{Implementation}}%
+\index{Implementing a Web Component%
+@\emph{Implementing a Web Component}}%
+\label{ch:implementation}
 
 \section{Overview}
 Speakur\index{Speakur} is an HTML5\index{HTML!HTML5} web application that uses the Polymer\index{Polymer} framework's implementation of Web Components\index{Web Components}.
@@ -118,7 +119,8 @@ Some of Speakur's internal components like \tcode{<speakur-theme>} are also base
 in a way that is similar but not identical to classes in object oriented programming (OOP)\index{object oriented programming (OOP)}\footnote{Note that JavaScript\index{JavaScript} itself is \textit{prototype}-based\index{prototype (JavaScript)} and does not have traditional classes or inheritance. 
 Similar behavior is obtained by using regular object instances (instead of classes) as the prototype for instantiating new objects.}. 
 Although composition\index{composition} or \textit{has-a} relationships are generally preferred, inheritance\index{inheritance} or \textit{is-a} relationships can make sense when you truly want to be able to substitute one instance for another interchangeably.
-JavaScript does not have the concept of a formal interface contract, which puts the burden of type checking on developers and unit tests.
+JavaScript does not have the concept of a formal interface contract, which puts the burden of type checking on developers and unit tests,
+but HTML elements (including custom elements\index{Custom Elements}) have formally specified interfaces\index{API} in the form of declared attributes.
 
 \section{Database Design}
 \label{sec:database}
@@ -127,7 +129,7 @@ Speakur uses Firebase for NoSQL\index{NoSQL}-style database storage.
 Traditional relational databases\index{relational database} (SQL\index{SQL}) have emphasized data normalization\index{normalization (database)} -- the removal of informational redundancies from databases such that a given \textit{fact} is only recorded in a single place.
 While this helps ensure data integrity, it can adversely affect query time and scalability as additional joins are required to bring in the necessary facts.
 One of the defining characteristics of the NoSQL movement is denormalization\index{denormalization}---that is, the principle of eliminating redundancy is sacrificed in order to gain performance~\cite{sadalage2012}.
-Facts can be defined in more than one place to speed up queries.
+Facts can be defined in more than one place to speed up queries by reducing the number of read operations.
 
 For example, some information about a post's author 
 such as their public username, id, and photo url is saved inside each post they write 
@@ -199,7 +201,7 @@ we can always recalculate the true count later using the individual user vote re
 \label{sec:sync}
 
 Speakur\index{Speakur} consists of a number of Polymer\index{Polymer} components which break down the problem of presenting a discussion forum into smaller tasks.
-Some of these components are listed in~\cref{table:speakurcomponents}.
+Some of these components are listed in~\cref{table:speakurcomponents} on~\cpageref{table:speakurcomponents}.
 They form a hierarchy with \tcode{<speakur-discussion>}\index{<speakur-discussion>} at the top (root). 
 \Cref{f:component_layout} illustrates this, with many components omitted for brevity.
 
@@ -253,7 +255,7 @@ whether locally or remotely initiated,
 will be reflected in the \tcode{post} variable
 and any associated data-bound\index{data-bound template} \tcode{<template>}\index{<template>}s, 
 and vice-versa.
-The \tcode{location=} attribute (the database source URL for this \tcode{<firebase-element>}\index{<firebase-element>|)}
+The \tcode{location=} attribute (the database source URL) for this \tcode{<firebase-element>}\index{<firebase-element>|)}
 is bound to an expression which finds the location with the \tcode{fbLocation} method.
 Any changes in the variables \tcode{firebase\-Location}, \tcode{parentId} or \tcode{postId} will cause \tcode{fbLocation} to be recomputed,
 which could in turn cause \tcode{post} to pull from a different location.
@@ -288,9 +290,10 @@ domReady: function () {
 A handler in the top level container (\tcode{<speakur-discussion>}\index{<speakur-discussion>}) responds to this named event (\tcode{speakur-locale-change}) and tells the
 internationalization\index{internationalization} component to update the language.
 This in turn sets the \tcode{\textbf{lc}} (locale) property in the base element.
-This property is then used in translation expressions as discussed in~\cref{sec:i18n} below.
+This property is then used in translation expressions as discussed in~\cref{sec:i18n}.
 
 \subsection{Data-Bound Templates}
+\label{sec:dbtemplates}
 Speakur translates internal variables (the model) into visible output with the use of data-bound templates\index{data-bound template}.
 This is similar in effect to the model-view-controller\index{model-view-controller} design pattern.
 As mentioned above, the custom element itself is the `model' and its \tcode{<template>}\index{<template>} is the view.
@@ -363,7 +366,7 @@ Example rules are given in~\cref{l:sec_rule1} on~\cpageref{l:sec_rule1}.
 Write rules determine whether a given create, modify or delete is allowed. 
 Validate rules are run after a write rule has passed in order to check whether the new version is correctly structured per business rules or requirements.
 Each expression has access to several pre-defined variables including snapshots of the database as it exists both before and after the change would be applied.
-For example,~\cref{l:sec_rule1} on~\cpageref{l:sec_rule1} shows rules for the \tcode{posts} table.
+For example,~\cref{l:sec_rule1} (\cpageref{l:sec_rule1}) shows rules for the \tcode{posts} table.
 The \tcode{.write} rule asserts that anyone can create a new post, 
 but modifying an existing post requires that you (\tcode{auth.uid}) are either the post owner or an administrator.
 The \tcode{.validate} rule ensures that all posts contain at least 4 keys: \tcode{threadId}, \tcode{text}, \tcode{author}, and \tcode{timestamp}.
