--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -1,5 +1,5 @@
 \chapter{Introduction to Speakur and Web Components}
-\index{Introduction@\emph{Introduction}}%
+\index{Introduction to Speakur and Web Components@\emph{Introduction to Speakur and Web Components}}%
 \label{ch:intro}
 
 %\section{blah}
@@ -63,7 +63,7 @@ has no significant relationship to Sun's (now Oracle's) popular Java\index{Java}
 (JS) programming language to web browsers in 1995 allowed for a completely new dimension of dynamic behavior that was not possible before~\cite{w3ccontributors2012}.
 Eventually web apps like Gmail\index{GMail} and Google Docs\index{Google!Google Docs}, powered by JavaScript, rivaled traditional desktop applications in functionality and usability while being instantly accessible from anywhere with an Internet connection.
 Still, web apps had to be stitched together `by hand' in ways that carefully ensured the different parts did not step on each other's toes, else disaster frequently ensued. 
-Each component or area of the system could not help but be coupled to the others at some level as a result of the programming model imposed by the DOM\index{DOM} and HTML~\cite{ihrig2012}.
+Each component or sub-system could not help but be coupled to the others at some level as a result of the programming model imposed by the DOM\index{DOM} and HTML~\cite{ihrig2012}.
 
 \subsubsection{The Growth of JavaScript}
 Over the years the dynamic behaviors afforded by JavaScript grew in importance along with the web, and helped contribute to its success. 
@@ -83,7 +83,7 @@ The industry kept searching for the Next Big Thing that would make writing high 
 In recent years (roughly 2011 to 2014) Google's Angular~\cite{googledevelopers2015-b}
 \index{Angular|textbf}
 has emerged as a dominant client framework, 
-due in part to its perceived high quality and the fact that it represents an common point for a fragmented industry to rally around~\cite{dickey2014}.
+due in part to its perceived high quality and to the fact that it represents a common point for a fragmented industry to rally around~\cite{dickey2014}.
 Facebook's React\index{React} library with its Virtual DOM is an up-and-comer focused on high performance that is more complementary in nature to Angular than a true challenger, 
 focusing primarily on the ``view'' part of the common 
 model-view-controller\index{model-view-controller} (MVC) 
@@ -131,7 +131,7 @@ and CSS Grid
 \index{Grid}
 systems~\cite{w3ccontributors2014,w3ccontributors2015-d,mozillacontributors2015}. 
 In part because many of these technologies are not yet formally accepted as W3C standards and are not yet widely implemented in typical mobile and desktop browsers, 
-Speakur\index{Speakur} has been implemented using Google's experimental Polymer\index{Polymer} framework~\cite{polymercontributors2015}.
+I implemented Speakur\index{Speakur} using Google's experimental Polymer\index{Polymer} framework~\cite{polymercontributors2015}.
 Polymer provides a JavaScript `polyfill'
 \index{polyfill}
 library to implement many of the new Web Component features in browsers which would otherwise not support them, 
@@ -151,9 +151,9 @@ and the service oriented architecture
 model. 
 The conversion of dynamic web logic---not mere snippets of plain HTML\index{HTML}---into bundles of reusable, extendable, composable services (components) enables web developers to move to a higher level of abstraction\index{abstraction} than was previously possible.
 
-The move towards a component-based Web will enable interesting new composite services, mashups, and may help broaden the potential pool of web developers. 
+The shift towards a component-based Web will enable interesting new composite services, mashups, and may help broaden the potential pool of web developers. 
 What previously required a highly integrated, high-overhead development model or lots of tedious glue code can become as simple as importing a custom element and dropping it onto a page.
-Integrated development environments (IDEs) and other tools that embrace Web Components will be able to assist content authors by, for example, offering name completion on custom elements and the attributes that form their API.
+Integrated development environments (IDEs) and other tools that embrace Web Components will be able to assist content authors by, for example, offering name completion on custom elements and the attributes that form their API\index{API}.
 
 \section{Structure of This Report}
 \index{Structure of This Report@\emph{Structure of This Report}}%
@@ -168,26 +168,26 @@ and the real-time synchronization of web application state.
 This report discusses many of the goals and principles of the Web Components initiative and how a number of different technologies taken together help raise the overall level of 
 abstraction\index{abstraction} for content authors, web engineers, and application developers---which I will refer to collectively as (web) authors for short.
 
-The Background section provides an introduction to some of the architectural problems inherent in modern web authoring and how Web Components\index{Web Components} (WC) address them. 
-It also provides some background the on software engineering design patterns that are embodied in Web Components such as encapsulation and composition.
-It describes some of the motivations behind the development of Speakur\index{Speakur} and some of the specific software engineering questions it addresses.
+\Cref{ch:background} gives an introduction to some of the architectural problems inherent in modern web authoring and how Web Components\index{Web Components} (WC) address them. 
+It provides background on the software engineering design patterns that are embodied in Web Components like encapsulation and composition.
+It describes some of the motivations behind the development of Speakur\index{Speakur} and some of the specific software engineering design questions it addresses.
 
-The Approach section describes the high level software architecture\index{architecture} choices behind Speakur and details the specific structures and techniques used when constructing Web Components\index{Web Components}.
+\Cref{ch:approach} describes the high level software architecture\index{architecture} choices behind Speakur and details the specific structures and techniques used when constructing Web Components\index{Web Components}.
 It describes how Speakur\index{Speakur} uses WC to implement encapsulated\index{encapsulation} modules whose internals are protected from unintentional outside influence. 
 It also describes how the choice of the Firebase\index{Firebase} cloud database service, its WebSocket-based\index{WebSockets} event notification system, and its security subsystem have impacted Speakur's architecture.
 
-The Implementation section shows how to apply Web Component\index{Web Components} principles to the task of creating a flexible and generic discussion forum for both desktop and mobile browsers. 
-It describes the low level architecture\index{architecture}, code flow, and data synchronization process, 
-as well as how to internationalize\index{internationalization} an JavaScript application such that the interface language (locale\index{localization}) can be switched on the fly.
+In \cref{ch:implementation}, Implementing a Web Component, I show how applying Web Component\index{Web Components} principles eases the task of creating a flexible discussion forum for both desktop and mobile browsers. 
+I describe the low level architecture\index{architecture}, code flow, and data synchronization process, 
+as well as how to internationalize\index{internationalization} a JavaScript application so the user interface language (locale\index{localization}) can be switched on the fly.
 Another important topic in this section is security\index{security}: how can we implement a largely client-based system while maintaining some kind of data integrity?
 
-This is followed by an Analysis section which discusses some of the outcomes 
+This is followed by~\cref{ch:analysis}, Analysis and Lessons Learned, which discusses some of the outcomes 
 as compared to the original goals and also looks at the impact of the selection of Web Components\index{Web Components}, 
-Polymer\index{Polymer}, Firebase\index{Firebase} and some of the other architectural\index{architecture} choices. 
-Finally, the Conclusion summarizes how the Web Components\index{Web Components} initiative will impact the future of software engineering\index{software engineering} for the web. 
+Polymer\index{Polymer}, Firebase\index{Firebase} and several other architectural\index{architecture} choices. 
+Finally, the Conclusion summarizes how the Web Components\index{Web Components} initiative will positively impact the future of software engineering\index{software engineering} for the web. 
 
 \section{Source Code and Demonstration Resources}
-\index{Speakur source code@\emph{Speakur source code}}%
+\index{Speakur!source code}
 
 The source code for Speakur\index{Speakur} consists of HTML\index{HTML} and JavaScript\index{JavaScript} files located in a Git\index{Git} version control repository. 
 These files constitute an \textit{HTML Import}\index{HTML!Imports} package that provides a
@@ -195,7 +195,7 @@ These files constitute an \textit{HTML Import}\index{HTML!Imports} package that 
 custom HTML element\index{Custom Elements} for the use of web authors in their own pages.
 An example of using \tcode{<speakur-discussion>} is given in Chapter 3 and in briefly in Listing~\ref{l:example1} below.
 
-\pagebreak
+%\pagebreak
 \begin{lstlisting}[language=HTML5,caption={Speakur custom HTML element},label=l:example1]
  <!-- place this on your page
       where you want a discussion -->
