Small section changes and attempting to fix bibliography hanging lines.

--- a/latex/chapter-background.tex
+++ b/latex/chapter-background.tex
@@ -328,7 +328,7 @@ it was always possible to make manual layout adjustments in JavaScript\index{Jav
 
 Besides JavaScript\index{JavaScript}, at least three CSS techniques can be used to make a responsive design: 
 the \tcode{@media}\index{@media|textbf} rule, 
-the Grid\index{Grid} layout, 
+the Grid\index{Grid|textbf} layout, 
 and Flexible (Flex)\index{Flex} boxes.
 The CSS \tcode{@media}\index{@media} rule allows one to restrict the scope of CSS rules such that they only apply to certain media types including different screen sizes.
 The CSS Grid\index{Grid|textbf} layout is intended to control the overall page structure on different device sizes~\cite{w3ccontributors2015-d}.
