--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -74,6 +74,7 @@
 	title = {Patterns in Polymer},
 	url = {http://patternsinpolymer.com/},
 	author = {Strom, Chris},
+	month = mar,
 	year = {2014},
 	howpublished = {http://patternsinpolymer.com/}
 },
@@ -100,10 +101,9 @@
 	howpublished = {http://japhr.blogspot.com/2014/02/i18next-polymer-and-pluralization.html}
 },
 
-@techreport{hickson2014,
-	type = {{W3C} Recommendation 28 October 2014},
+@online{hickson2014,
+	type = {{W3C} Recommendation},
 	title = {{HTML5} A vocabulary and associated {APIs} for {HTML} and {XHTML}},
-	institution = {{W3C}},
 	author = {Hickson, Ian and Berjon, Robin and Faulkner, Steve and Leithead, Travis and Navara, Erika Doyle and {O'Connor}, Edward and Pfeiffer, Silvia},
 	month = oct,
 	year = {2014},
@@ -332,7 +332,6 @@ complement to the modularity and portability of native {HTML} Web Components.},
 },
 
 @book{dickey2014,
-	series = {Develop and Design},
 	title = {Write Modern Web Apps with the {MEAN} Stack: Mongo, Express, {AngularJS}, and Node.js},
 	isbn = {9780133962376},
 	url = {http://books.google.com/books?id=UEOZBAAAQBAJ},
